force-app/main/default/objects/Trigger_Dependency__mdt/Trigger_Dependency__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Dependency</label>
    <pluralLabel>Trigger Dependency</pluralLabel>
</CustomObject>