force-app/main/default/objects/Trigger_Dependency__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Defines the order of workers execution. Default is 0, which is undefined order.</description>
    <label>Execution Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>