force-app/main/default/objects/Trigger_Dependency__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the trigger worker will be executed.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>