force-app/main/default/objects/Trigger_Dependency__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Dependency</relationshipLabel>
    <relationshipName>Trigger_Dependency</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>