force-app/main/default/objects/Trigger_Dependency__mdt/fields/Other_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Object_API_Name__c</fullName>
    <description>For objects, which are currently not supported in entity definition</description>
    <inlineHelpText>For objects, which are currently not supported in entity definition</inlineHelpText>
    <label>Other Object API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>