force-app/main/default/objects/Trigger_Dependency__mdt/fields/Worker_Description__c.field-meta.xml
<CustomField>
    <fullName>Worker_Description__c</fullName>
    <inlineHelpText>Briefly describe the functionality of the worker class</inlineHelpText>
    <label>Worker Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>