force-app/main/default/objects/Trigger_Dependency__mdt/validationRules/Either_Object_name_or_Other_Object_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Object_name_or_Other_Object_Name</fullName>
    <active>true</active>
    <description>Only one of the object names must be populated</description>
    <errorConditionFormula>AND(ISBLANK(Object_Name__c), ISBLANK(Other_Object_API_Name__c))
            || AND(!ISBLANK(Object_Name__c) &amp;&amp; !ISBLANK(Other_Object_API_Name__c))</errorConditionFormula>
    <errorMessage>One of the Object names must be populated</errorMessage>
</ValidationRule>