force-app/main/default/objects/Trigger_Dependency__mdt/listViews/More_Info.listView-meta.xml
<ListView>
    <fullName>More_Info</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_Name__c</columns>
    <columns>Other_Object_API_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>MoreInfo</label>
</ListView>